fix madebyyou alignment and font type

--- a/api/app/assets/stylesheets/site.scss
+++ b/api/app/assets/stylesheets/site.scss
@@ -50,8 +50,8 @@ body {
         background-size: cover;
 
         div {
-            .card {
-                .remixlike{
+            &.card {
+                &.remixlike{
                     &:before{
                         display: none;
                     }
@@ -103,6 +103,11 @@ body {
             margin-left: auto;
             margin-right: auto;
         }
+    }
+    .madebyyou_cards {
+        width: 80%;
+        max-width: 1180px;
+        padding-left: 1%;
     }
     .madebyyou_initial {
         height: 540px !important;
